--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,23 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=Balashanthi#7
 
 
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url = jdbc:mysql://localhost:3306/pharmadb
+
+spring.mail.host=smtp.gmail.com
+spring.mail.username=deepashdeepika77
+spring.mail.password=Balashanthi#7
+spring.mail.port=587
+
+# Other properties
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+# TLS , port 587
+spring.mail.properties.mail.smtp.starttls.enable=true
