--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,12 @@
     <artifactId>spring-boot-starter-mail</artifactId>
     
 </dependency>
+	<!-- https://mvnrepository.com/artifact/com.itextpdf/itextpdf -->
+<dependency>
+    <groupId>com.itextpdf</groupId>
+    <artifactId>itextpdf</artifactId>
+    <version>5.5.13</version>
+</dependency>
 	
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
